--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-    id 'org.springframework.boot' version '3.2.4'
-    id 'io.spring.dependency-management' version '1.1.4'
-    id 'java-library'
+    id 'java'
+    id 'org.springframework.boot' version '3.4.5'
+    id 'io.spring.dependency-management' version '1.1.7'
+    id 'maven-publish'
 }
 
 group = 'com.hyeon'
@@ -13,21 +14,10 @@ repositories {
 }
 
 dependencies {
-    // Spring Boot 자동 설정
     implementation 'org.springframework.boot:spring-boot-autoconfigure'
-    
-    // AOP
     implementation 'org.springframework.boot:spring-boot-starter-aop'
-    
-    // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    
-    // Spring Web
     implementation 'org.springframework.boot:spring-boot-starter-web'
-}
-
-test {
-    useJUnitPlatform()
 }
 
 bootJar {
@@ -36,4 +26,29 @@ bootJar {
 
 jar {
     enabled = true
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionResult()
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
+
+            groupId = 'com.hyeon'
+            artifactId = 'api-usage-tracker-spring-boot-starter'
+            version = '0.0.1-SNAPSHOT'
+        }
+    }
+}
+
+test {
+    useJUnitPlatform()
 }
